# minvr-images

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPNG.cmake
data/: YURT_config.xml  desktop-freeglut.xml  desktop-glfw.xml  yurt-sm.xml  yurt-vsm.xml
src/: CMakeLists.txt  MVR.h  PlanktonShading.fragmentshader  StandardShading.fragmentshader  StandardShading.vertexshader  desktop.xml  mvImage.cpp  mvImage.h  mvImageApp.cpp  mvImageApp.h  mvShape.cpp  mvShape.h  mvi.xml  shader.cpp  shader.h  texture.h  tgl.cpp  tgm.cpp  tgp.cpp  vecTypes.h
src/common/: controls.cpp  controls.h  objloader.cpp  objloader.h  shader.cpp  shader.h  texture.cpp  texture.h
src/utils/: matrix.cpp  matrix.h
